fix(chat): Fixed message spacing and added header button toggling (#167)
* feat(chat): reworking of error handling, story controls, added video

* chore(icons): add js extensions on imports

* feat(chat): added header, card components and reeize

* chore(chat): added list object

* chore(chat): merged files

* fix(ts): address some TS errors

* chore(chat): fixed ts errors

* fix(extenstions): use js extensions

* chore(chat): add chat to the index.js file

* fix(chat): add .js extensions to the icon imports

* chore(chat): added submit event and conversation object

* chore(chat): added disable buttons option

* feat(chat): added chart and table subcomponents

* fix(charts): fix some ts errors

* fix(charts): fix ts errors

* chore(chart): merging into main

* feat(chat): componentized every element

* feat(chat): streaming and multi-charts

* chore(chat): added chart showcase

* chore(chat): finalized merge

* chore(chat): merge fixes and taglist

* chore(chat): final touches

* chore(chat): fixed camelcase import errors

* chore(chat): readded vega-lite TS flag

* feat(chat): extensive chart updates and slotting

* chore(chat): removed logs

* chore(chat): merging packages

* chore(chat): adressing package issues

* Update packages/chat/package.json

* chore(chat): fixed new TS issues

* feat(chat): added speech recognition and chat fixes

* chore(chat): fixed naming conventions

* chore(chat): fixed tagging, added chart options

* chore(chat): removed logs and changed chart modals/options

* chore(chat): fixed chart update issue, repeating charts and docs

* chore(chat): chart interactions, design updates

* chore(chat): added properties to docs

* chore(chat): added missing import

* Update packages/chat/components/chartElement/__stories__/chart.mdx

* chore(chat): removed logs, markdown edits

* chore(chat): fixed spacing bug and added header button options

* chore(chat): merge

--- a/packages/chat/components/message/src/message.scss
+++ b/packages/chat/components/message/src/message.scss
@@ -78,6 +78,7 @@ $css--plex: true !default;
   .#{$clabs-prefix}--chat-message-dropdown-user {
     clear: both;
     float: inline-end;
+    min-block-size: 16px;
     padding-block-start: 8px;
   }
 
@@ -117,7 +118,6 @@ $css--plex: true !default;
     color: var(--chat-message-unique-display-color, $text-secondary);
     font-size: 12px;
     gap: 16px;
-    padding-block-end: 8px;
   }
 
   .#{$clabs-prefix}--chat-message-response-bot {
@@ -132,6 +132,7 @@ $css--plex: true !default;
 
   .#{$clabs-prefix}--chat-message-dropdown-bot {
     inline-size: 100%;
+    min-block-size: 16px;
     padding-block-start: 8px;
   }
 
